<resources>
    <string name="app_name">YoPass</string>

    <string name="dummy_button_login">QQ授权登录</string>
    <string name="dummy_content">hi\n</string>

    <string name="qq_auth_cancel">授权登录取消</string>
    <string name="qq_auth_completel">授权登录成功</string>
    <string name="qq_auth_fail">授权登录失败</string>
    <string name="title_activity_main">YoPass</string>
    <string name="action_change_password">修改密码</string>
    <string name="action_grouping">分组管理</string>
    <string name="action_sign_out">退出账号</string>
    <string name="action_confirm">确定</string>
    <string name="action_add_grouping">添加分组</string>
    <string name="action_default_grouping_name">默认</string>
    <string name="refresh_loading">正在加载</string>

    <string name="password_item_account_tip">账号：</string>
    <string name="password_item_password_tip">密码：</string>
    <string name="password_item_remarks_tip">备注↓↓</string>

    <string name="btn_ok">确定</string>
    <string name="btn_cancle">取消</string>

    <string-array name="alert_dialog_list_todo_password_item_long_click">
        <item>复制密码</item>
        <item>修改</item>
        <item>删除</item>
    </string-array>
    <string-array name="alert_dialog_list_todo_grouping_item_long_click">
        <item>修改</item>
        <item>删除</item>
    </string-array>

    <string name="password_item_delect_todo">是否确定删除？</string>
    <string name="grouping_item_delect_todo">是否确定删除？</string>
    <string name="title_activity_add_password">YoPass</string>
    <string name="title_activity_grouping">YoPass</string>
    <string name="edit_grouping_name">请输入组名</string>

    <string name="yo_title">标题</string>
    <string name="yo_account">账号</string>
    <string name="yo_password">密码</string>
    <string name="yo_remarks">备注</string>
    <string name="yo_top">置顶</string>
    <string name="yo_hide">隐藏</string>

    <string name="edit_title">请输入标题</string>
    <string name="edit_account">请输入账号</string>
    <string name="change_password_edit_old_password">请输入旧密码</string>
    <string name="change_password_edit_new_password">请输入新密码</string>
    <string name="change_password_edit_new_password_too">请再次输入新密码</string>
    <string name="change_password_old_password_error">旧密码错误</string>

    <string name="edit_password">请输入密码</string>
    <string name="edit_password_too">请再次输入密码</string>
    <string name="edit_password_no_same">两次密码不一致</string>
    <string name="edit_remarks">请输入标备注</string>
    <string name="copy_success_tip">复制成功</string>
    <string name="password_six_tip">密码至少六位数</string>
    <string name="title_activity_check_password">YoPass</string>

    <string name="edit_right_password">请输入正确的密码</string>
    <string name="edit_password_error">密码错误</string>

    <string name="action_password_info_item">密码信息</string>
    <string name="title_activity_change_password">修改密码</string>

    <string name="net_error">网络异常</string>

    <string name="update_text">检测到新版本，确定更新</string>
    <string name="btn_ok_web_update">网页更新</string>
</resources>
