<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.yoyo.yopassword.password.activity.AddPasswordActivity"
    tools:showIn="@layout/activity_add_password">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <CheckBox
                android:id="@+id/cb_is_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/til_title"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:checked="false"
                android:text="@string/yo_top"
                android:textColor="@color/font_color_79" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/cb_is_top">

                <EditText
                    android:id="@+id/et_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/yo_title"
                    android:imeOptions="flagNavigateNext"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/cb_is_hide_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/til_account"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:checked="false"
                android:text="@string/yo_hide"
                android:textColor="@color/font_color_79" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/til_title"
                android:layout_toLeftOf="@+id/cb_is_hide_account">

                <EditText
                    android:id="@+id/et_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/yo_account"
                    android:imeOptions="flagNavigateNext"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_grouping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/til_password"
                android:layout_alignEnd="@+id/cb_is_hide_account"
                android:layout_alignRight="@+id/cb_is_hide_account"
                android:onClick="onYoClick"
                android:textAllCaps="false" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/til_account"
                android:layout_toLeftOf="@+id/btn_grouping">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/yo_password"
                    android:imeOptions="flagNavigateNext"
                    android:inputType="textPassword"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/til_password">

                <EditText
                    android:id="@+id/et_remarks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|top"
                    android:hint="@string/yo_remarks"
                    android:inputType="textMultiLine"
                    android:lines="4" />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
