<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.yoyo.yopassword.check.ChangePasswordActivity"
    tools:showIn="@layout/activity_change_password">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/change_password_edit_old_password"
                    android:imeOptions="flagNavigateNext"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/til_old_password"
                >

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/change_password_edit_new_password"
                    android:imeOptions="flagNavigateNext"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <!--  <TextView
                  android:id="@+id/tv_edit_password_tip2"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_below="@+id/et_password"
                  android:layout_marginTop="16dp"
                  android:gravity="center"
                  android:text="@string/edit_password_too"
                  android:textSize="@dimen/title_text_size_x" />-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/til_password1">

                <EditText
                    android:id="@+id/et_password2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/change_password_edit_new_password_too"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>

