<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/selector_click"
    android:padding="10dp"
    >

    <TextView
        android:id="@+id/password_item_save_info_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password_item_account"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:ellipsize="end"
        android:singleLine="true"
        android:textColor="@color/font_color_9c"
        android:text="save_info_time" />

    <TextView
        android:id="@+id/password_item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/password_item_save_info_time"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="title"
        android:textSize="@dimen/title_text_size" />

    <TextView
        android:id="@+id/password_item_account_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_item_title"
        android:ellipsize="end"
        android:singleLine="true"
        android:layout_marginTop="@dimen/space_item_x"
        android:textColor="@color/tip"
        android:text="@string/password_item_account_tip" />

    <TextView
        android:id="@+id/password_item_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_item_title"
        android:layout_toRightOf="@+id/password_item_account_tip"
        android:ellipsize="end"
        android:singleLine="true"
        android:layout_marginTop="@dimen/space_item_x"
        android:layout_marginLeft="@dimen/space_item"
        android:textColor="@color/font_color_dc"
        android:text="account" />

    <TextView
        android:id="@+id/password_item_password_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_item_account"
        android:ellipsize="end"
        android:singleLine="true"
        android:layout_marginTop="@dimen/space_item"
        android:textColor="@color/tip"
        android:text="@string/password_item_password_tip" />

    <TextView
        android:id="@+id/password_item_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_item_account"
        android:layout_toRightOf="@+id/password_item_account_tip"
        android:ellipsize="end"
        android:singleLine="true"
        android:layout_marginTop="@dimen/space_item"
        android:layout_marginLeft="@dimen/space_item"
        android:textColor="@color/font_color_dc"
        android:text="******" />

    <TextView
        android:id="@+id/password_item_remarks_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_item_password"
        android:ellipsize="end"
        android:singleLine="true"
        android:layout_marginTop="@dimen/space_item_x"
        android:text="@string/password_item_remarks_tip" />

    <TextView
        android:id="@+id/password_item_remarks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_item_remarks_tip"
        android:ellipsize="end"
        android:singleLine="true"
        android:layout_marginTop="@dimen/space_item"
        android:textColor="@color/font_color_9c"
        android:text="remarks" />

</RelativeLayout>